--- a/matcolor/src/main/res/values/android_material_design_colours.xml
+++ b/matcolor/src/main/res/values/android_material_design_colours.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- google's material design colours from
-    http://www.google.com/design/spec/style/color.html#color-ui-color-palette -->
+    <!--
+    google's material design colours from
+    http://www.google.com/design/spec/style/color.html#color-ui-color-palette
+    -->
 
     <!--reds-->
     <color name="md_red_50">#FFEBEE</color>
