--- a/matcolor/src/main/res/values/basic_colors.xml
+++ b/matcolor/src/main/res/values/basic_colors.xml
@@ -14,4 +14,7 @@
     <color name="teal">#008080</color>
     <color name="orange">#FFA500</color>
 
+    <color name="gray">#808080</color>
+    <color name="white_smoke">#F5F5F5</color>
+
 </resources>
